# HITSIC_CH32V103

./: .gitignore  .gitmodules  Folder.DotSettings
HITSIC_CH32V103_MRS/: .cproject  .launch  .project  .template  CMakeLists.txt  HITSIC_CH32V103_MRS.wvproj
HITSIC_CH32V103_MRS/Startup/: startup_ch32v10x.S
HITSIC_CH32V103_MRS/User/: main.c
HITSIC_CH32V103_MRS/board/: board.c  board.h
HITSIC_CH32V103_MRS/component/: debug.c  debug.h
HITSIC_CH32V103_MRS/device/: ch32v10x_conf.h  system_ch32v10x.c
HITSIC_CH32V103_MRS/doc/: Project Configuration.md
HITSIC_CH32V103_MRS/sc_library/: sc_common.cpp  sc_common.h  sc_gpio.c  sc_gpio.h  sc_i2c.c  sc_i2c.h  sc_spi.c  sc_spi.h  sc_uart.c  sc_uart.h  sc_unit_test.h
HITSIC_CH32V103_MRS/source/: isr.c  main.c  main.cpp  syscalls.c
docs/: Project Configuration.md  _config.yml  index.md
